--- a/13- DevLinks/index.html
+++ b/13- DevLinks/index.html
@@ -11,7 +11,27 @@
     <div id="container">
       <div id="profile">
         <img src="assets/Avatar.png" alt="" />
+        <p>@Guilhermelvl</p>
       </div>
+
+      <ul>
+        <li>
+          <a href="https://github.com/GuilhermeLVL/YouTube_Projetos/tree/main/08-Projeto%20RodrigoFaro" target="_blank">Projeto Rodrigo Faro</a>
+        </li>
+
+        <li>
+          <a href="https://github.com/GuilhermeLVL/YouTube_Projetos/tree/main/12%20-%20QR%20Code%20Generator%20in%20JavaScript" target="_blank">QR Code Generator</a>
+        </li>
+        
+        <li>
+          <a href="https://github.com/GuilhermeLVL/YouTube_Projetos/tree/main/14-Gerador%20de%20cor" target="_blank">Gerador de cor</a>
+        </li>
+
+        <li>
+          <a href="https://github.com/GuilhermeLVL/YouTube_Projetos" target="_blank">Projetos</a>
+        </li>
+      </ul>
+
     </div>
 
     <script src="jss.js"></script>
