--- a/13- DevLinks/index.html
+++ b/13- DevLinks/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br" class="light">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -11,7 +11,7 @@
     <div id="container">
       <div id="profile">
         <img src="assets/Avatar.png" alt="" />
-        <p class="rgbColor">@Guilhermelvl</p>
+        <p>@Guilhermelvl</p>
       </div>
 
       <ul>
@@ -67,6 +67,9 @@
         
       </div>
 
+      <footer>
+         <p class="rgbColor">❤</p>
+      </footer>
     </div>
 
 
