--- a/13- DevLinks/index.html
+++ b/13- DevLinks/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="light">
+<html lang="pt-br" class="">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -10,22 +10,32 @@
   <body>
     <div id="container">
       <div id="profile">
-        <img src="assets/Avatar.png" alt="" />
-        <p>@Guilhermelvl</p>
+        <img class="imag" src="assets/Avatar.png" alt="" />
+        <p class="pHover">@Guilhermelvl</p>
       </div>
+
+      <div id="switch">
+
+      </div>
+      <button>
+      </button>
+      
+      <span>
+
+      </span>
 
       <ul>
         <li>
           <a
-            href="https://github.com/GuilhermeLVL/YouTube_Projetos/tree/main/08-Projeto%20RodrigoFaro"
+            href="https://codepen.io/guilherme-pinheiro-oliveira/pen/QWBgrrQ"
             target="_blank"
-            >Projeto Rodrigo Faro</a
+            >Relogio</a
           >
         </li>
 
         <li>
           <a
-            href="https://github.com/GuilhermeLVL/YouTube_Projetos/tree/main/12%20-%20QR%20Code%20Generator%20in%20JavaScript"
+            href="https://codepen.io/guilherme-pinheiro-oliveira/pen/ExpXEzp"
             target="_blank"
             >QR Code Generator</a
           >
@@ -33,7 +43,7 @@
 
         <li>
           <a
-            href="https://github.com/GuilhermeLVL/YouTube_Projetos/tree/main/14-Gerador%20de%20cor"
+            href="https://codepen.io/guilherme-pinheiro-oliveira/pen/bGjRvJe"
             target="_blank"
             >Gerador de cor</a
           >
@@ -41,14 +51,14 @@
 
         <li>
           <a
-            href="https://github.com/GuilhermeLVL/YouTube_Projetos"
+            href="https://codepen.io/guilherme-pinheiro-oliveira/pen/BaPZrvo"
             target="_blank"
-            >Projetos</a
+            >Loading</a
           >
         </li>
       </ul>
 
-      <div id="social-links">
+      <div id="social-links" >
         <a href="https://github.com/GuilhermeLVL" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
@@ -68,7 +78,7 @@
       </div>
 
       <footer>
-         <p class="rgbColor">❤</p>
+         <p class="pFoo pHover">❤</p>
       </footer>
     </div>
 
