--- a/13- DevLinks/index.html
+++ b/13- DevLinks/index.html
@@ -14,7 +14,7 @@
         <p class="pHover">@Guilhermelvl</p>
       </div>
 
-      <div id="switch">
+      <div id="switch" onclick="toggleMode()">
         <button>
       </button>
       <span>
